# handler/deleteOpening.go
@@ -8,6 +8,20 @@ import (
 	"github.com/victorramos887/golang_oportunities/schemas"
 )
 
+
+
+// @BasePath /api/v1
+
+// @Summary Delete opening
+// @Description Delete job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening identification"
+// @Success 200 {object} DeleteOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [delete]
 func DeleteOpeningHandler(ctx *gin.Context) {
 	//ctx.JSON(http.StatusOK, gin.H{"message": "DELETE Opening"})
 	id := ctx.Query("id")
