# handler/response.go
@@ -1,6 +1,9 @@
 package handler
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/victorramos887/golang_oportunities/schemas"
+)
 
 func sendError(ctx *gin.Context, code int, msg string) {
 	ctx.Header("Content-Type", "application/json")
@@ -17,4 +20,28 @@ func sendSuccess(ctx *gin.Context, op string, data interface{}) {
 		"message": op,
 		"data":    data,
 	})
+}
+
+
+type ErrorResponse struct {
+	Message string `json:"message"`
+	ErrorCode string `json:"errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
+}
+
+type DeleteOpeningResponse struct {
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
+}
+type ShowOpeningResponse struct {
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
+}
+type ListOpeningResponse struct {
+	Message string `json:"message"`
+	Data []schemas.OpeningResponse `json:"data"`
 }
